third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/bad-uni-esc-1.stderr
TOML parse error at line 1, column 23
  |
1 | bad-uni-esc-1 = "val\ue"
  |                       ^
invalid unicode 4-digit hex code
